Fixed issue so now code blocks have scroll bar when content is too long

--- a/themes/pure/source/styles/_includes/post.less
+++ b/themes/pure/source/styles/_includes/post.less
@@ -256,6 +256,11 @@
         }
     }
 
+    .highlight {
+        width:940px;
+        overflow:auto;
+    }
+
     p code,
     li code,
     table code {
