--- a/themes/pure/source/styles/main.less
+++ b/themes/pure/source/styles/main.less
@@ -70,6 +70,7 @@ body {
         sans-serif;
     font-size: 16px;
     letter-spacing: 1.0382px;
+    background-color:var(--theme-first);
 }
 
 button {
